<resources>
    <string name="app_name">DinnerApp</string>
    <string name="type_password">Password</string>
    <string name="type_userid">User ID</string>
    <string name="type_email">Email</string>
    <string name="type_phone">Phone number</string>
    <string name="type_country">Country</string>

    <string name="type_newuser">New User</string>
    <string name="type_userprofile">Profile</string>
    <string name="type_newevent">New Event</string>
    <string name="type_mainmenu">Main Menu</string>
    <string name="type_login">DinerApp</string>
    <string name="type_searchevent">Search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
